# cell-image-analysis

./: Classification_kmeans_1.py  Elbow.csv  README.md  Silhouette.csv  cell_data.csv  labels.csv  pyproject.toml  requirements.txt
Programming/: Cell_Counting.py  Cell_Counting_method_1.py  Classification_Clustering_1.py  Classification_kmeans_1.py  Classification_kmeans_2.py  Classification_kmeans_3.py  Classification_kmeans_multiple.py  Classification_kmeans_only.py  Classificiation_method_2.py  Classificiation_method_3.py  Classificiation_method_4.py  DWT_Performance.py  MAIN Adaptive_Thresh.py  MAIN.py  MAIN_ microglia.py  MAIN_microglia.py  base_cell_classification_v2.py  base_cell_classification_v3.py  base_cell_classificiation.py  cell_classification.py  cell_classification_with_dwt.py  cell_classification_with_dwt_NEW.py  coeffs_map copy.py  coeffs_map.py  image_import.py  image_processing.py  image_processing_v2.py  image_processing_v3.py  image_processing_v4.py  image_processing_v5.py  image_processing_v6.py  multi_dwt_classification_WORKING.py  performance copy.py  performance.py  reconstructed_images.py  removing_wavelet_coeff.py  requirements.txt  rgb_splitting.py  self_organising_maps.py  thresholding.py  (+2 more)
Programming/old_code_files/: denoising.py  image_processing_v5 copy.py  performance.py  reconstructed_images.py
Programming/synthetic_000_images/: 10GRAY.tif  11GRAY.tif  12GRAY.tif  13GRAY.tif  14GRAY.tif  15GRAY.tif  16GRAY.tif  17GRAY.tif  18GRAY.tif  19GRAY.tif  20GRAY.tif  2GRAY.tif  3GRAY.tif  (+6 more)
cell_image_analysis.egg-info/: PKG-INFO  SOURCES.txt
(+6 files in other folders)
