[project]
name = "cell-image-analysis"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cell-image_analysis*"]  # package names should match these glob patterns (["*"] by default)
